samples/_failures_safe/1761128903_ba4c2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29421050.c: In function ‘main’:
./samples/SAFE/__tmp_29421050.c:159:9: error: expected expression at end of input
  159 |         free_matrix(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_29421050.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29421050.c:159:9: error: expected declaration or statement at end of input
